tests/NormalTests/paczka2/big_fuzzy/16602076.err
Error in line 2: A98 S58 50,5
Error in line 11: GkxOK S58 -2,2
Error in line 10: GkxOK S58 91,9
Error in line 15: UpPpu1k A785 46,7
Error in line 30: jJXp7w A98 60,7
Error in line 34: GkxOK S382 2,0
Error in line 29: A98 S58 42,6
Error in line 46: UpPpu1k A785 4,7
Error in line 48: GkxOK S58 74,3
Error in line 58: HYNk S382 0,1
Error in line 75: jJXp7w A98 44,2
Error in line 73: rvhz A785 39,2
Error in line 92: A98 A785 85,8
Error in line 91: jJXp7w A785 2458,0
Error in line 106: GkxOK S382 63,2
Error in line 109: GkxOK S58 39,2
Error in line 99: HYNk A785 83,1
Error in line 120: GkxOK S382 3,7
Error in line 129: rvhz S382 2,9
Error in line 144: dGFQd S58 2,2
Error in line 148: rvhz A785 42,6
Error in line 154: rvhz S382 19,3
Error in line 158: A98 S382 21(,3
Error in line 155: rvhz S58 0,1
Error in line 147: A98 S382 77,3
Error in line 175: HYNk S382 80,6
Error in line 178: A98 A98 29,4
Error in line 184: HYNk S58 69,5
Error in line 185: A98 A785 15,7
Error in line 205: jJXp7w S382 49,4
Error in line 212: HYNk S58 86,6
Error in line 195: rvhz S382 40,8
Error in line 220: UpPpu1k S58 73,44
Error in line 219: GkxOK S382 63,0
Error in line 232: HYNk S382 27,67
Error in line 234: GkxOK S58 63,5
Error in line 211: jJXp7w S58 62,5
